--- a/template/SignUp.html
+++ b/template/SignUp.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap.css" rel="stylesheet">
+    <link href="css/bootstrap.css" rel="stylesheet">
     <style type="text/css">
       body {
         padding-top: 40px;
@@ -42,7 +42,7 @@
       }
 
     </style>
-    <link href="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-responsive.css" rel="stylesheet">
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
 
     <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
     <!--[if lt IE 9]>
@@ -62,13 +62,19 @@
     <div class="container">
 
       <form class="form-signin">
-        <h2 class="form-signin-heading">登陆</h2>
+        <h2 class="form-signin-heading">请注册</h2>
+        <input class="input-block-level" placeholder="用户名" type="text">
         <input class="input-block-level" placeholder="邮箱" type="text">
         <input class="input-block-level" placeholder="密码" type="password">
+        <input class="input-block-level" placeholder="确认密码" type="password">
+        <input class="input-block-level" placeholder="年龄" type="text">
+        <input class="input-block-level" placeholder="专业" type="text">
+        <input class="input-block-level" placeholder="学院" type="text">
+        <input class="input-block-level" placeholder="学号" type="text">
         <label class="checkbox">
           <input value="remember-me" type="checkbox"> Remember me
         </label>
-        <button class="btn btn-large btn-primary" type="submit">登陆</button>
+        <button class="btn btn-large btn-primary" type="submit">注册</button>
       </form>
 
     </div> <!-- /container -->
@@ -76,19 +82,19 @@
     <!-- Le javascript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/jquery.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-transition.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-alert.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-modal.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-dropdown.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-scrollspy.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-tab.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-tooltip.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-popover.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-button.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-collapse.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-carousel.js"></script>
-    <script src="Sign%20in%20%C2%B7%20Twitter%20Bootstrap_files/bootstrap-typeahead.js"></script>
+    <script src="css/jquery.js"></script>
+    <script src="css/bootstrap-transition.js"></script>
+    <script src="css/bootstrap-alert.js"></script>
+    <script src="css/bootstrap-modal.js"></script>
+    <script src="css/bootstrap-dropdown.js"></script>
+    <script src="css/bootstrap-scrollspy.js"></script>
+    <script src="css/bootstrap-tab.js"></script>
+    <script src="css/bootstrap-tooltip.js"></script>
+    <script src="css/bootstrap-popover.js"></script>
+    <script src="css/bootstrap-button.js"></script>
+    <script src="css/bootstrap-collapse.js"></script>
+    <script src="css/bootstrap-carousel.js"></script>
+    <script src="css/bootstrap-typeahead.js"></script>
 
   
 
