--- a/template/index.html
+++ b/template/index.html
@@ -104,34 +104,34 @@
 		  
           <div class="row">
             <div class="col-6 col-sm-6 col-lg-4">
-              <h2>{{b[0].title}}</h2>
-              <p>{{b[0].recommend_index}} </p>
-              <p><a class="btn btn-default" href="{{b[0].source_url}}" role="button">View details »</a></p>
+              <h2>{{b0.title}}</h2>
+              <p>推荐指数：{{b0.recommend_index}} </p>
+              <p><a class="btn btn-default" href="{{b0.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
-              <h2>{{b[1].title}}</h2>
-              <p>{{b[1].recommend_index}} </p>
-              <p><a class="btn btn-default" href="{{b[1].source_url}}" role="button">View details »</a></p>
+              <h2>{{b1.title}}</h2>
+              <p>推荐指数：{{b1.recommend_index}} </p>
+              <p><a class="btn btn-default" href="{{b1.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
-              <h2>{{b[2].title}}</h2>
-              <p>{{b[2].recommend_index}}  </p>
-              <p><a class="btn btn-default" href="{{b[2].source_url}}" role="button">View details »</a></p>
+              <h2>{{b2.title}}</h2>
+              <p>推荐指数：{{b2.recommend_index}}  </p>
+              <p><a class="btn btn-default" href="{{b2.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
-              <h2>{{b[3].title}}</h2>
-              <p>{{b[3].recommend_index}}  </p>
-              <p><a class="btn btn-default" href="{{b[3].source_url}}" role="button">View details »</a></p>
+              <h2>{{b3.title}}</h2>
+              <p>推荐指数{{b3.recommend_index}}  </p>
+              <p><a class="btn btn-default" href="{{b3.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
-              <h2>{{b[4].title}}</h2>
-              <p>{{b[4].recommend_index}}  </p>
-              <p><a class="btn btn-default" href="{{b[4].source_url}}" role="button">View details »</a></p>
+              <h2>{{b4.title}}</h2>
+              <p>推荐指数{{b4.recommend_index}}  </p>
+              <p><a class="btn btn-default" href="{{b4.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
-              <h2>{{b[5].title}}</h2>
-              <p>{{b[5].recommend_index}}  </p>
-              <p><a class="btn btn-default" href="{{b[5].source_url}}" role="button">View details »</a></p>
+              <h2>{{b5.title}}</h2>
+              <p>推荐指数{{b5.recommend_index}}  </p>
+              <p><a class="btn btn-default" href="{{b5.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
           </div><!--/row-->
         </div><!--/span-->
