--- a/template/新闻页.html
+++ b/template/新闻页.html
@@ -65,9 +65,14 @@
 		<h1 align="center">head<small>subhead</small></h1>
 		<h5 align="center">author</h5>
 		<ul>
-		<li style="text-align:center"><img src="./新闻页_files/QQ图片20151027193233.png" style="width: 500px; height: 400px;">
+		<li style="text-align:center"><img src="./新闻页_files/QQ图片20151027193233.jpg" style="width: 500px; height: 400px;">
 		</li>
-		</ul><p>正文</p>
+		</ul><p>10月23日下午，由机电学院诚造社组织的“模型制作课堂”在哈工大二校区成功举行，社团全体成员参加了此次活动。
+
+首先，社长杨雷系统地介绍了社团的组织架构与模型的相关知识。然后由此次活动的负责人向大家介绍了关于模型制作的基础知识，讲解了各种模型的区分以及工具的使用，同时将自己的作品风格展示给大家。此次活动为大家提供了一个交流模型制作经验的机会，让社员们了解到诚造社的特色所在。活动过程中每个人都沉浸在模型的制作拼装中，获得了许多模型制作的经验与乐趣。
+
+诚造社是由机电学院2015级本科生同学成立的新社团，致力于模型玩具的赏玩、拼装、DIY设计以及制作。社团计划在日后继续举办相关活动，提供模型拼装的场地，邀请专业人员进行指导，给有相同爱好的同学提供切搓交流的机会，丰富机电学院学生的校园文化生活。
+</p>
 	</div>
 	
 	
