--- a/template/index.html
+++ b/template/index.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://bootstrap.evget.com/assets/ico/favicon.ico">
 
-    <title>Off Canvas Template for Bootstrap</title>
+    <title>工大圈子</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://bootstrap.evget.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -45,9 +45,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="http://www.baidu.com/">New</a></li>
-            <li><a href="http://www.baidu.com/">Friends</a></li>
-            <li><a href="http://www.baidu.com/">Forum</a></li>
+            <li class="active"><a href="http://www.baidu.com/">新闻</a></li>
           </ul>
           <!--错误信息我不知道该放在哪-->
             {% if tip %}
@@ -84,7 +82,7 @@
 				</li><li data-target="#myCarousel" data-slide-to="1">
 				</li><li data-target="#myCarousel" data-slide-to="2">
 			</li></ol>
-			<div class="carousel-inner" role="listbox">
+			<!--<div class="carousel-inner" role="listbox">
 				<div class="item active" align="center">
 					<a href="http://www.baidu.com/" target="_blank"><img src="./主菜单_files/QQ图片20151027193233.png" alt="First slide"></a>
 					<div class="carousel-caption">标题 1</div>
@@ -97,7 +95,7 @@
 					<a href="http://www.baidu.com/" target="_blank"><img src="./主菜单_files/QQ图片20151027193233.png" alt="First slide"></a>
 					<div class="carousel-caption">标题 3</div>
 				</div>
-			</div>
+			</div>-->
 			<a class="carousel-control left" href="file:///F:/demo/bootstrap3-plugin-carousal-caption.htm#myCarousel" role="button" data-slide="prev">
 				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
     			<span class="sr-only">Previous</span>
@@ -111,33 +109,33 @@
           <div class="row">
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b0.title}}</h2>
-              <p>推荐指数：{{b0.recommend_index}} </p>
-              <p><a class="btn btn-default" href="http://today.hit.edu.cn{{b0.source_url}}" role="button">View details »</a></p>
+              <p>{{b0.recommend_index}} </p>
+              <p><a class="btn btn-default" href="/news_page/?url={{b0.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b1.title}}</h2>
-              <p>推荐指数：{{b1.recommend_index}} </p>
-              <p><a class="btn btn-default" href="{{b1.source_url}}" role="button">View details »</a></p>
+              <p>{{b1.recommend_index}} </p>
+              <p><a class="btn btn-default" href="/news_page/?url={{b1.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b2.title}}</h2>
-              <p>推荐指数：{{b2.recommend_index}}  </p>
-              <p><a class="btn btn-default" href="{{b2.source_url}}" role="button">View details »</a></p>
+              <p>{{b2.recommend_index}}  </p>
+              <p><a class="btn btn-default" href="/news_page/?url={{b2.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b3.title}}</h2>
-              <p>推荐指数{{b3.recommend_index}}  </p>
-              <p><a class="btn btn-default" href="{{b3.source_url}}" role="button">View details »</a></p>
+              <p>{{b3.recommend_index}}  </p>
+              <p><a class="btn btn-default" href="/news_page/?url={{b3.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b4.title}}</h2>
-              <p>推荐指数{{b4.recommend_index}}  </p>
-              <p><a class="btn btn-default" href="{{b4.source_url}}" role="button">View details »</a></p>
+              <p>{{b4.recommend_index}}  </p>
+              <p><a class="btn btn-default" href="/news_page/?url={{b4.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
             <div class="col-6 col-sm-6 col-lg-4">
               <h2>{{b5.title}}</h2>
-              <p>推荐指数{{b5.recommend_index}}  </p>
-              <p><a class="btn btn-default" href="{{b5.source_url}}" role="button">View details »</a></p>
+              <p>{{b5.recommend_index}}  </p>
+              <p><a class="btn btn-default" href="/news_page/?url={{b5.source_url}}" role="button">View details »</a></p>
             </div><!--/span-->
           </div><!--/row-->
         </div><!--/span-->
@@ -145,15 +143,6 @@
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
           <div class="list-group" position="fixed">
             <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E6%96%B0%E9%97%BB" class="list-group-item active">热点新闻</a>
-            <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">热点人物</a>
-            <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E8%AF%9D%E9%A2%98" class="list-group-item">热点话题</a>
-            <a href="http://www.baidu.com/" class="list-group-item">其他新闻类信息往下添加</a>
-            <a href="http://www.baidu.com/" class="list-group-item">.</a>
-            <a href="http://www.baidu.com/" class="list-group-item">.</a>
-            <a href="http://www.baidu.com/" class="list-group-item">.</a>
-            <a href="http://www.baidu.com/" class="list-group-item">.</a>
-            <a href="http://www.baidu.com/" class="list-group-item">.</a>
-            <a href="http://www.baidu.com/" class="list-group-item">.</a>
           </div>
         </div><!--/span-->
       </div><!--/row-->
@@ -173,7 +162,7 @@
       <hr>
 
       <footer>
-        <p>© Company 2014</p>
+        <p></p>
       </footer>
 
     </div><!--/.container-->
