--- a/template/index.html
+++ b/template/index.html
@@ -45,7 +45,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="http://www.baidu.com/">新闻</a></li>
+            <li class="active"><a href="http://www.baidu.com/">新闻和课程</a></li>
           </ul>
           <!--错误信息我不知道该放在哪-->
             {% if tip %}
@@ -143,6 +143,7 @@
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
           <div class="list-group" position="fixed">
             <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E6%96%B0%E9%97%BB" class="list-group-item active">热点新闻</a>
+	    <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E6%96%B0%E9%97%BB" class="list-group-item ">热点课程</a>
           </div>
         </div><!--/span-->
       </div><!--/row-->
