新闻页修改 和 本地链接更改

--- a/template/主菜单.html
+++ b/template/主菜单.html
@@ -11,12 +11,12 @@
     <title>Off Canvas Template for Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="http://bootstrap.evget.com/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="./主菜单_files/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="http://bootstrap.evget.com/examples/offcanvas/offcanvas.css" rel="stylesheet">
+    <link href="./主菜单_files/offcanvas.css" rel="stylesheet">
 	
-	<link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
+	<link href="./主菜单_files/lib.bootstrap.min.css" rel="stylesheet">
 	<script src="./主菜单_files/jquery.min.js"></script>
 	<script src="./主菜单_files/bootstrap.min.js"></script>
 	
