--- a/template/friends.html
+++ b/template/friends.html
@@ -91,17 +91,40 @@
 
         <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
           <div class="list-group" position="fixed">
-            <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E6%96%B0%E9%97%BB" class="list-group-item">好友1</a>
-            <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友2</a>
+            {% if friends %}
+            {% for f in friends %}
+            <a href="#" class="list-group-item">{{ f.username }}</a>
+            {% endfor %}
+            {% endif %}
           </div>
         </div><!--/span-->
-      <form class="form-signin">
+      <form class="form-signin" method = "get" action = "">
         <h2 class="form-signin-heading">查找添加好友</h2>
-        <input class="input-block-level" placeholder="输入要查找的id" type="text">
+        <input class="input-block-level" placeholder="输入要查找的id" type="text" name = "SearchChar">
         <button class="btn btn-large btn-primary" type="submit">查找</button>
       </form>
-
-
+     {% if HasSearch %}
+    {% if Results %}
+        <table>
+        {% for f in Results %}
+            {% ifequal f.username username %}
+            {% else %}
+            <tr>
+            <td>{{ f.username }}</td>
+            <td><a href = "#">进入主页</a></td>
+                {% if f in friends %}
+                <td>已经是好友了</td>
+                {% else %}
+                <td><a href = "{% url 'addfriend' username=username friendID=f.id %}">添加为好友</a></td>
+                {% endif %}
+            </tr>
+            {% endifequal %}
+        {% endfor %}
+        </table>
+    {% else %}
+    <h3>用户"{{ SearchChar }}"不存在!</h3>
+    {% endif %}
+    {% endif %}
 
 
       </div><!--/row-->
