--- a/template/loginlater.html
+++ b/template/loginlater.html
@@ -46,8 +46,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="http://www.baidu.com/">新闻和课程</a></li>
-            <li><a href="http://www.baidu.com/">好友</a></li>
-            <li><a href="http://www.baidu.com/">个人主页</a></li>
+            <li><a href="{% url 'friendt' username %}">好友</a></li>
+            <li><a href="#">个人主页</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
