--- a/template/loginlater.html
+++ b/template/loginlater.html
@@ -41,11 +41,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="http://www.baidu.com/">工大圈子</a>
+          <a class="navbar-brand" href="#">工大圈子</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="http://www.baidu.com/">新闻和课程</a></li>
+            <li class="active"><a href="{% url 'home' %}">新闻和课程</a></li>
             <li><a href="{% url 'friendt' username %}">好友</a></li>
             <li><a href="#">个人主页</a></li>
           </ul>
