--- a/template/friends.html
+++ b/template/friends.html
@@ -45,8 +45,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="http://www.baidu.com/">新闻和课程</a></li>
-            <li class="active"><a href="http://www.baidu.com/">好友</a></li>
+            <li ><a href="{% url 'home' %}">新闻和课程</a></li>
+            <li class="active"><a href="{% url 'home' %}">好友</a></li>
             <li><a href="http://www.baidu.com/">个人主页</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
