--- a/template/新闻页.html
+++ b/template/新闻页.html
@@ -9,13 +9,11 @@
     <link rel="shortcut icon" href="http://bootstrap.evget.com/assets/ico/favicon.ico">
 
     <title>Jumbotron Template for Bootstrap</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="./新闻页_files/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="./新闻页_files/jumbotron.css" rel="stylesheet">
-
+    {% load staticfiles %}
+    <link href="{% static "新闻页_files/bootstrap.min.css" %}" rel="stylesheet">
+    <link href="{% static "新闻页_files/jumbotron.css" %}" rel="stylesheet">
+    <link href="{% static "新闻页_files/pinglunlan.css" %}" rel="stylesheet">
+    <link href="{% static "新闻页_files/style.css" %}" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -26,8 +24,7 @@
     <![endif]-->
 	
 	
-	<link href="./新闻页_files/pinglunlan.css" type="text/css" rel="stylesheet">
-<link rel="stylesheet" type="text/css" href="./新闻页_files/style.css"></head>
+
 
   <body>
 
@@ -48,7 +45,7 @@
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
-			  你好，<a href="file:///F:/software%20engineering/Jumbotron%20Template%20for%20Bootstrap.html#">xxx账号</a>
+			  你好，<a href="#">xxx账号</a>
               <!--input type="text" placeholder="账号" class="form-control"-->
             </div>
             <!--div class="form-group">
