新闻页 推荐文章按钮

--- a/template/新闻页.html
+++ b/template/新闻页.html
@@ -10,10 +10,10 @@
 
     <title>Jumbotron Template for Bootstrap</title>
     {% load staticfiles %}
-    <link href="{% static "新闻页_files/bootstrap.min.css" %}" rel="stylesheet">
-    <link href="{% static "新闻页_files/jumbotron.css" %}" rel="stylesheet">
-    <link href="{% static "新闻页_files/pinglunlan.css" %}" rel="stylesheet">
-    <link href="{% static "新闻页_files/style.css" %}" rel="stylesheet">
+    <link href="./新闻页_files/bootstrap.min.css" rel="stylesheet">
+    <link href="./新闻页_files/jumbotron.css" rel="stylesheet">
+    <link href="./新闻页_files/pinglunlan.css" rel="stylesheet">
+    <link href="./新闻页_files/style.css" rel="stylesheet">
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -59,6 +59,7 @@
     </div><!-- /.navbar -->
 	
 	<div class="main">
+		<a type="button" class="btn" type="#">推荐文章</a>
 		<h1 align="center">科比连续4场50+笑傲NBA 乔丹之外还有“神”</h1>
 		<h5 align="center">汉水游侠</h5>
 		<div class="article">
@@ -66,7 +67,7 @@
 这也是科比连续第4场比赛得分超过50分，纵观NBA历史，只有张伯伦曾经连续7场得分超过50分，而乔丹和贝勒的连续3场得分50+的纪录也正式作古。值得一提的是，今天对阵黄蜂是湖人“背靠背”的第二场比赛，而这次“背靠背”是连续客场作战，可是科比没有表现出丝毫疲惫，他的出场时间和投篮次数，以及超过50%的投篮命中率，证明了乔丹之外，篮球场上仍有一位“神”！{{info}}</pre>
 		</div>
 	</div>
-	
+		
 	
 	<div class="footer">     
          <div class="Input_Box">     
