--- a/template/新闻页.html
+++ b/template/新闻页.html
@@ -60,11 +60,10 @@
 	
 	<div class="main">
 		<a type="button" class="btn" type="#">推荐文章</a>
-		<h1 align="center">科比连续4场50+笑傲NBA 乔丹之外还有“神”</h1>
-		<h5 align="center">汉水游侠</h5>
+		<h1 align="center"></h1>
+		<h5 align="center"></h5>
 		<div class="article">
-			<pre>网易体育3月24日讯 当科比（编辑科比资料）连续第三场拿下50+之后，也许还会有人建议他需要更多地帮助队友得分，才能证明自己。可科比没有理会，3月24日，湖人客场挑战黄蜂，科比再次以一己之力战胜了对手，他全场出战46分钟，29投16中、三分球5投2中、罚球16罚全中，砍下50分，并抓下7个篮板，带领湖人以111比105战胜黄蜂，取得4连胜。而那些善意的劝说者和教条者的言论更像是鸡蛋里挑骨头了。
-这也是科比连续第4场比赛得分超过50分，纵观NBA历史，只有张伯伦曾经连续7场得分超过50分，而乔丹和贝勒的连续3场得分50+的纪录也正式作古。值得一提的是，今天对阵黄蜂是湖人“背靠背”的第二场比赛，而这次“背靠背”是连续客场作战，可是科比没有表现出丝毫疲惫，他的出场时间和投篮次数，以及超过50%的投篮命中率，证明了乔丹之外，篮球场上仍有一位“神”！{{info}}</pre>
+			<pre>{{info}}</pre>
 		</div>
 	</div>
 		
