--- a/template/freinds.html
+++ b/template/freinds.html
@@ -10,13 +10,13 @@
 
     <title>工大圈子</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="./freind_files/bootstrap.min.css" rel="stylesheet">
+   <!-- Bootstrap core CSS -->
+    <link href="http://bootstrap.evget.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="./freind_files/offcanvas.css" rel="stylesheet">
+    <link href="http://bootstrap.evget.com/examples/offcanvas/offcanvas.css" rel="stylesheet">
 	
-	<link href="./freind_files/lib.bootstrap.min.css" rel="stylesheet">
+	<link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 	<script src="./登陆后主界面_files/jquery.min.js"></script>
 	<script src="./登陆后主界面_files/bootstrap.min.js"></script>
 	
@@ -45,9 +45,9 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li ><a href="http://www.baidu.com/">新闻和课程</a></li>
-            <li class="active"><a href="http://www.baidu.com/">好友</a></li>
-            <li><a href="http://www.baidu.com/">个人主页</a></li>
+            <li ><a href="{% url 'home' %}">新闻和课程</a></li>
+            <li class="active"><a href="{% url 'friendt' username %}">好友</a></li>
+            <li><a href="{% url 'self_page' username %}">个人主页</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
@@ -91,12 +91,12 @@
 	
 	<div class="Left">
 		<h2 class="form-signin-heading">好友列表</h2>
-          <div class="list-group">
-            <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E6%96%B0%E9%97%BB" class="list-group-item">好友1</a>
-            <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友2</a>
-			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友3</a>
-			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友4</a>
-			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友5</a>
+          <div class="list-group" position="fixed">
+            {% if friends %}
+            {% for f in friends %}
+            <a href="#" class="list-group-item">{{ f.username }}</a>
+            {% endfor %}
+            {% endif %}
           </div>
 	</div>
 	
@@ -104,10 +104,15 @@
 		<h2 class="form-signin-heading">推荐好友</h2>
           <div class="list-group">
             <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E6%96%B0%E9%97%BB" class="list-group-item">好友1(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
             <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友2(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
 			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友3(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
 			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友4(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
 			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友5(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
           </div>
 	</div>
 	
@@ -119,16 +124,30 @@
         <button class="btn btn-large btn-primary" type="submit">查找</button>
       </form>
 	</div>
-	
-	<div class="rightbtn">
-		<ul style="list-style:none; position:absolute; top:60px; left:820px;">
-			<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
-			<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
-			<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
-			<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
-			<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
-		</ul>
-	</div>
+	    {% if HasSearch %}
+    {% if Results %}
+        <table>
+        {% for f in Results %}
+            {% ifequal f.username username %}
+            {% else %}
+            <tr>
+            <td>{{ f.username }}</td>
+            <td><a href = "#">进入主页</a></td>
+                {% if f in friends %}
+                <td>已经是好友了</td>
+                {% else %}
+                <td><a href = "{% url 'addfriend' username=username friendID=f.id %}">添加为好友</a></td>
+                {% endif %}
+            </tr>
+            {% endifequal %}
+        {% endfor %}
+        </table>
+    {% else %}
+    <h3>用户"{{ SearchChar }}"不存在!</h3>
+    {% endif %}
+    {% endif %}
+
+
 
 
 
