--- a/template/friends.html
+++ b/template/friends.html
@@ -10,7 +10,7 @@
 
     <title>工大圈子</title>
 
-    <!-- Bootstrap core CSS -->
+   <!-- Bootstrap core CSS -->
     <link href="http://bootstrap.evget.com/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
@@ -46,8 +46,8 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li ><a href="{% url 'home' %}">新闻和课程</a></li>
-            <li class="active"><a href="{% url 'home' %}">好友</a></li>
-            <li><a href="http://www.baidu.com/">个人主页</a></li>
+            <li class="active"><a href="{% url 'friendt' username %}">好友</a></li>
+            <li><a href="{% url 'self_page' username %}">个人主页</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
             <div class="form-group">
@@ -88,8 +88,9 @@
 			</a>
 		</div>
 		  
-
-        <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
+	
+	<div class="Left">
+		<h2 class="form-signin-heading">好友列表</h2>
           <div class="list-group" position="fixed">
             {% if friends %}
             {% for f in friends %}
@@ -97,13 +98,34 @@
             {% endfor %}
             {% endif %}
           </div>
-        </div><!--/span-->
-      <form class="form-signin" method = "get" action = "">
+	</div>
+	
+	<div class="Right">
+		<h2 class="form-signin-heading">推荐好友</h2>
+          <div class="list-group">
+            <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E6%96%B0%E9%97%BB" class="list-group-item">好友1(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
+            <a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友2(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
+			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友3(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
+			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友4(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
+			<a href="file:///F:/software%20engineering/url.%E7%83%AD%E7%82%B9%E4%BA%BA%E7%89%A9" class="list-group-item">好友5(点击查看)</a>
+					<li style="padding:4px;"><a type="button" class="btn btn-primary" href="#">添加好友</a></li>
+          </div>
+	</div>
+	
+	
+	<div class="footer">
+      <form class="form-signin" method="get" action="">
         <h2 class="form-signin-heading">查找添加好友</h2>
-        <input class="input-block-level" placeholder="输入要查找的id" type="text" name = "SearchChar">
+        <input class="input-block-level" placeholder="输入要查找的id" type="text" name="SearchChar">
         <button class="btn btn-large btn-primary" type="submit">查找</button>
       </form>
-     {% if HasSearch %}
+	</div>
+    <div>
+	    {% if HasSearch %}
     {% if Results %}
         <table>
         {% for f in Results %}
@@ -125,17 +147,15 @@
     <h3>用户"{{ SearchChar }}"不存在!</h3>
     {% endif %}
     {% endif %}
-
-
-      </div><!--/row-->
-	  
-
-
-      <hr>
+    </div>
+</div>
+</div>
+</div>
 
 
 
-    </div><!--/.container-->
+
+      
 
 
 
