--- a/template/friends.html
+++ b/template/friends.html
@@ -71,35 +71,50 @@
         <div class="col-xs-12 col-sm-9">
  
 		  
-          <div id="myCarousel" class="carousel slide">
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="">
-				</li><li data-target="#myCarousel" data-slide-to="1" class="">
-				</li><li data-target="#myCarousel" data-slide-to="2" class="active">
-			</li></ol>
 
-			<a class="carousel-control left" href="file:///F:/demo/bootstrap3-plugin-carousal-caption.htm#myCarousel" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    			<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control right" href="file:///F:/demo/bootstrap3-plugin-carousal-caption.htm#myCarousel" role="button" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    			<span class="sr-only">Next</span>
-			</a>
-		</div>
 		  
-	
+<!----------------------好友列表------------------------------->	
 	<div class="Left">
 		<h2 class="form-signin-heading">好友列表</h2>
           <div class="list-group" position="fixed">
-            {% if friends %}
-            {% for f in friends %}
+            {% if mylist %}
+            {% for f in mylist %}
+            <p>
             <a href="#" class="list-group-item">{{ f.username }}</a>
+            {% if f.ReqDir == 1 %}
+                <a href="{% url 'addfriendconfirm' username=username friendID=f.id %}" class="list-group-item">
+				&nbsp;&nbsp;&nbsp;&nbsp;同意</a>
+            {% else %}
+                {% if f.ReqDir == -1 %}
+                    <a href='#' class="list-group-item">&nbsp;&nbsp;&nbsp;&nbsp;等待对方确认</a>
+				{% else %}
+					<a href="{% url 'SendMesg' username=username friendID=f.id  %}" class="list-group-item">
+					&nbsp;&nbsp;&nbsp;&nbsp;私信</a>
+                {% endif %}
+            {% endif %}
+            </p>
             {% endfor %}
             {% endif %}
           </div>
 	</div>
-	
+<!----------------------好友消息------------------------------->
+<h2 class="form-signin-heading">未读消息</h2>
+{% if Info %}
+<div class="list-group">
+	{% for info in Info %}
+	<li>
+		<a href="#" class="list-group-item">{{ info.1.username }}[{{ info.0.Time }}]：{{ info.0.Content }}</a>
+		<a href="{% url 'SendMesg' username=username friendID=info.1.id %}" class="list-group-item">&nbsp;&nbsp;&nbsp;&nbsp;回复</a>
+        <a href="{% url 'MarkRead' info.0.id %}" class="list-group-item">&nbsp;&nbsp;&nbsp;&nbsp;标记为已读</a>
+	</li>
+	{% endfor %}
+</div>
+{% else %}
+<div class="list-group">
+<a href="#" class="list-group-item">无！</a>
+</div>
+{% endif %}
+<!----------------------推荐好友------------------------------->	
 	<div class="Right">
 		<h2 class="form-signin-heading">推荐好友</h2>
           <div class="list-group">
@@ -116,7 +131,7 @@
           </div>
 	</div>
 	
-	
+<!----------------------查找及显示用户------------------------------->	
 	<div class="footer">
       <form class="form-signin" method="get" action="">
         <h2 class="form-signin-heading">查找添加好友</h2>
