登录前欢迎界面、个人资料修改

--- a/template/friends.html
+++ b/template/friends.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://bootstrap.evget.com/assets/ico/favicon.ico">
 
-    <title>工大圈子</title>
+    <title>好友互动</title>
 
    <!-- Bootstrap core CSS -->
     <link href="http://bootstrap.evget.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,8 +19,13 @@
 	<link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 	<script src="./登陆后主界面_files/jquery.min.js"></script>
 	<script src="./登陆后主界面_files/bootstrap.min.js"></script>
-	
-
+    <style>
+	img{
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius:2px;
+    }
+    </style>
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
@@ -50,10 +55,13 @@
             <li><a href="{% url 'self_page' username %}">个人主页</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
+          <img src="/img/{{ username }}_icon.jpg" width="25" height="25" />
             <div class="form-group">
-			  你好，<a href="./登陆后主界面_files/登陆后主界面.html">{{ username }}账号</a>
+            
+			  <a href="{% url 'userinfo' username=username %}">{{ username }}</a>
               <!--input type="text" placeholder="账号" class="form-control"-->
             </div>
+            
             <!--div class="form-group">
               <input type="password" placeholder="密码" class="form-control">
             </div>
@@ -103,7 +111,7 @@
 <div class="list-group">
 	{% for info in Info %}
 	<li>
-		<a href="#" class="list-group-item">{{ info.1.username }}[{{ info.0.Time }}]：{{ info.0.Content }}</a>
+		<a href="#" class="list-group-item">{{ info.0.Time|date:"Y-m-d H:i:s"}}&nbsp;[{{ info.1.username }}]：{{ info.0.Content }}</a>
 		<a href="{% url 'SendMesg' username=username friendID=info.1.id %}" class="list-group-item">&nbsp;&nbsp;&nbsp;&nbsp;回复</a>
         <a href="{% url 'MarkRead' info.0.id %}" class="list-group-item">&nbsp;&nbsp;&nbsp;&nbsp;标记为已读</a>
 	</li>
