--- a/template/loginlater.html
+++ b/template/loginlater.html
@@ -8,7 +8,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="http://bootstrap.evget.com/assets/ico/favicon.ico">
 
-    <title>工大圈子</title>
+    <title>新闻和课程</title>
 
     <!-- Bootstrap core CSS -->
     <link href="http://bootstrap.evget.com/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,13 @@
 	<link href="http://libs.baidu.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet">
 	<script src="./登陆后主界面_files/jquery.min.js"></script>
 	<script src="./登陆后主界面_files/bootstrap.min.js"></script>
-	
+	<style>
+	img{
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius:2px;
+    }
+    </style>
 
     <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -45,15 +51,17 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="{% url 'home' %}">新闻和课程</a></li>
+            <li class="active"><a href="#">新闻和课程</a></li>
             <li><a href="{% url 'friendt' username %}">好友</a></li>
             <li><a href="{% url 'self_page' username %}">个人主页</a></li>
           </ul>
 		  <form class="navbar-form navbar-right" role="form">
+          <img src="/img/{{ username }}_icon.jpg" width="25" height="25" alt="你还没有头像"/>
             <div class="form-group">
-			  你好，<a href="./登陆后主界面_files/登陆后主界面.html">{{ username }}账号</a>
+			  <a href="{% url 'userinfo' username=username %}">{{ username }}</a>
               <!--input type="text" placeholder="账号" class="form-control"-->
             </div>
+            
             <!--div class="form-group">
               <input type="password" placeholder="密码" class="form-control">
             </div>
@@ -73,35 +81,6 @@
             <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
           </p>
 		  
-          <div id="myCarousel" class="carousel slide">
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="">
-				</li><li data-target="#myCarousel" data-slide-to="1" class="">
-				</li><li data-target="#myCarousel" data-slide-to="2" class="active">
-			</li></ol>
-			<div class="carousel-inner" role="listbox">
-				<div class="item" align="center">
-					<a href="http://www.baidu.com/" target="_blank"><img src="./登陆后主界面_files/QQ图片20151027193233.png" alt="First slide"></a>
-					<div class="carousel-caption">标题 1</div>
-				</div>
-				<div class="item" align="center">
-					<a href="http://www.baidu.com/" target="_blank"><img src="./登陆后主界面_files/QQ图片20151027193233.png" alt="First slide"></a>
-					<div class="carousel-caption">标题 2</div>
-				</div>
-				<div class="item active" align="center">
-					<a href="http://www.baidu.com/" target="_blank"><img src="./登陆后主界面_files/QQ图片20151027193233.png" alt="First slide"></a>
-					<div class="carousel-caption">标题 3</div>
-				</div>
-			</div>
-			<a class="carousel-control left" href="file:///F:/demo/bootstrap3-plugin-carousal-caption.htm#myCarousel" role="button" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-    			<span class="sr-only">Previous</span>
-			</a>
-			<a class="carousel-control right" href="file:///F:/demo/bootstrap3-plugin-carousal-caption.htm#myCarousel" role="button" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-    			<span class="sr-only">Next</span>
-			</a>
-		</div>
 		  
           <div class="row">
             <div class="col-6 col-sm-6 col-lg-4">
