--- a/template/signup.html
+++ b/template/signup.html
@@ -53,7 +53,7 @@
 
     <div class="container">
 
-      <form class="form-signin" action = '' method = 'post'>
+      <form class="form-signin" action = "/login/" method = "post">
       {% csrf_token %}
         <h2 class="form-signin-heading">请注册</h2>
         {% if error %}
